--- a/site.css
+++ b/site.css
@@ -51,6 +51,9 @@ footer {
 
 #headerlinks a, #headerlinks a:visited {
     padding-right: 30px;
+    padding-left: 30px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     color: whitesmoke;
 }
 
@@ -101,10 +104,17 @@ footer {
 }
 
 #bodytext img{
+    border-radius: 3px;
     float: right;
     width: 600px;
-    height: 400px;
+    height: auto;
     margin-left: 30px;
+    max-width: 50%;    
+}
+
+#bodytext img.tall{
+    
+    width: 300px;
 }
 
 #bodytext a, #bodytext a:visited {
@@ -135,13 +145,18 @@ footer {
     float: left;
 }
 
-#footerlinks a {
-    padding-right: 30px;
+#sitefooter a {
     color: whitesmoke;
 }
 
-#footerlinks a:visited {
-    color: grey;
+#sitefooter a:visited {
+    color: whitesmoke;
 }
 
+#footerlinks a {
+    padding-right: 30px;
+}
 
+#footerlinks a:hover {
+    color: grey;
+}
